[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.5.0"
axum = "0.7.4"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
sha3 = "0.11.0-pre.3"
hex = "0.4.3"
serde_json = "1.0.114"
